crates/compiler/src/tests/e2e/good/0075_double_dyn_wrapping/main.gom
trait Showable {
    fn display(Self) -> string;
}

struct Wrapped { label: string }

impl Showable for Wrapped {
    fn display(self: Wrapped) -> string { self.label }
}

fn wrap(x: int32) -> Wrapped {
    Wrapped { label: (x).to_string() }
}

fn main() {
    println(Showable::display(wrap(42)));
}
