crates/compiler/src/tests/e2e/bad/0022_trait_return_type_mismatch/main.gom
trait Score {
  fn value(Self) -> int32;
}

struct Grade {
  letter: string,
}

impl Score for Grade {
  fn value(self: Grade) -> string {
    self.letter
  }
}

fn main() -> unit {
  ()
}
